# lettering

./: .gitignore  README.md
lettering/: CMakeLists.txt  package.xml
lettering_config/: CMakeLists.txt  package.xml
lettering_config/meshes/collision/: RO.STL  S-.STL  al.STL  du.STL  in.STL  ri.STL  st.STL
lettering_config/meshes/letters/: RO.STL  S-.STL  al.STL  du.STL  in.STL  ri.STL  st.STL
lettering_config/meshes/signs/: RO.STL  S-.STL  al.STL  du.STL  in.STL  ri.STL  st.STL
lettering_config/urdf/: sign.xacro  sign_macro.xacro
